[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.167.0",
    "google-generativeai>=0.8.5",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "youtube-transcript-api>=1.0.3",
]
